--- a/index.html
+++ b/index.html
@@ -51,6 +51,56 @@
             </div>
 
         </section>
+
+        <section class="section-03">
+
+            <!-- essa é a div pai -->
+            <div class="container">
+
+                <!-- construindo a primeira caixa -->
+                    <div class="card">
+                       <!-- a segunda div é para o conteúdo -->
+                        <div class="content">
+                            <h2>01</h2>
+
+                            <h3>Card Um</h3>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit repellat velit eaque enim consectetur veritatis eius illo mollitia voluptatem ut? Rerum voluptatum dicta deserunt minus laboriosam ducimus obcaecati! Nesciunt, praesentium.</p>
+
+                            <a href="#">Mais Informações</a>
+                        </div>
+                    
+                </div>
+
+                <div class="card">
+
+                    <div class="content">
+                        <h2>02</h2>
+
+                        <h3>Card Dois</h3>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit repellat velit eaque enim consectetur veritatis eius illo mollitia voluptatem ut? Rerum voluptatum dicta deserunt minus laboriosam ducimus obcaecati! Nesciunt, praesentium.</p>
+
+                        <a href="#">Mais Informações</a>
+                    </div>
+                </div>
+
+                <div class="card">
+
+                    <div class="content">
+                        <h2>03</h2>
+
+                        <h3>Card Três</h3>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit repellat velit eaque enim consectetur veritatis eius illo mollitia voluptatem ut? Rerum voluptatum dicta deserunt minus laboriosam ducimus obcaecati! Nesciunt, praesentium.</p>
+
+                        <a href="#">Mais Informações</a>
+                    </div>
+                </div>
+            </div>
+
+            
+        </section>
     </main>
 
 
