--- a/index.html
+++ b/index.html
@@ -136,3 +136,14 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+<!-- design de interiores -->
+<!-- buscar referencia no pinterest -->
+<!-- criar um repositorio somente para ele. -->
